--- a/src/content/once-ui/basics/spacing.mdx
+++ b/src/content/once-ui/basics/spacing.mdx
@@ -10,7 +10,7 @@ Once UI utilizes a spacing system based on a custom 8px grid to provide options 
 
 ## Spacing system
 
-Static spaces are set in REMs and can be referenced with their pixel value calculated with a 16px root font size. These spacings will slightly adjust based on your `--font-scaling` variables.
+Once UI relies on the type called `SpacingToken` to define static and responsive spaces. It's used for margins, paddings, gaps, and position distances. Static spaces are set in REMs and can be referenced with their pixel value calculated with a 16px root font size. For a more illustrative example, visit the [Structure](/once-ui/basics/structure) page. These spacings will slightly adjust based on your `--font-scaling` variables.
 
 <Row gap="4" paddingTop="64" marginBottom="24">
   {[0, 1, 2, 4, 8, 12, 16, 20, 24, 32, 40, 48, 56, 64, 80, 104, 128, 160].map((size) => (
