--- a/src/content/once-ui/components/accordion.mdx
+++ b/src/content/once-ui/components/accordion.mdx
@@ -44,25 +44,19 @@ A collapsible container that allows users to expand and collapse sections of con
 
 ## API reference
 
-<Table
-  marginTop="16"
-  marginBottom="24"
-  data={{
-    headers: [
-      { content: "Prop", key: "prop", sortable: true },
-      { content: "Type", key: "type" },
-      { content: "Default", key: "default" },
-    ],
-    rows: [
-      ["title", <InlineCode>ReactNode</InlineCode>, "-"],
-      ["children", <InlineCode>ReactNode</InlineCode>, "-"],
-      ["icon", <InlineCode>string</InlineCode>, <InlineCode>"chevronDown"</InlineCode>],
-      ["iconRotation", <InlineCode>number</InlineCode>, <InlineCode>180</InlineCode>],
-      ["size", <InlineCode>"s" | "m" | "l"</InlineCode>, <InlineCode>"m"</InlineCode>],
-      ["radius", <InlineCode>"xs" | "s" | "m" | "l" | "full"</InlineCode>, "-"],
-      ["open", <InlineCode>boolean</InlineCode>, <InlineCode>false</InlineCode>]
-    ]
-  }}
+<PropsTable
+  content={[
+    ["title", "ReactNode"],
+    ["children", "ReactNode"],
+    ["icon", "string", "chevronDown"],
+    ["iconRotation", "number", "180"],
+    ["size", ["s", "m", "l"], "m"],
+    ["radius", ["xs", "s", "m", "l", "xl", "full"]],
+    ["open", "boolean", "false"],
+    ["style", "CSSProperties"],
+    ["className", "string"]
+    ["...flex", "FlexProps"]
+  ]}
 />
 
 ## Methods
@@ -84,4 +78,3 @@ The Accordion component exposes the following methods through a ref:
     ]
   }}
 />
-
