--- a/src/content/once-ui/components/carousel.mdx
+++ b/src/content/once-ui/components/carousel.mdx
@@ -8,4 +8,15 @@ navIcon: "learn"
 
 ## Title
 
-Content
+## API reference
+
+<PropsTable
+  content={[
+    ["images", "Array<{ src: string; alt: string }>", "[]"],
+    ["indicator", ["line", "thumbnail"], "line"],
+    ["aspectRatio", "string", "16 / 9"],
+    ["sizes", "string"],
+    ["revealedByDefault", "boolean", "false"],
+    ["...Flex", "FlexProps"]
+  ]}
+/>
